traversal.snake.Snake.scala.error
Compilation error:
Snake:19: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (dir == Direction.EST) {
  ^Snake:28: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return fin
  ^